--- a/style.css
+++ b/style.css
@@ -26,3 +26,14 @@ body::-webkit-scrollbar {
   font-weight: 600;
   font-style: normal;
 }
+
+.hidden {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 1s, transform 1s;
+}
+
+.hidden.visible {
+  opacity: 1;
+  transform: translateY(0);
+}
