--- a/style.css
+++ b/style.css
@@ -26,3 +26,20 @@ body::-webkit-scrollbar {
   font-weight: 600;
   font-style: normal;
 }
+
+.transition-all {
+  transition: all 0.5s ease;
+}
+@keyframes explosion {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(2);
+    opacity: 0;
+  }
+}
+.explode {
+  animation: explosion 0.5s forwards;
+}
